# memscope-rs

./: .gitignore  ACTUAL_COMPLETION_STATUS.md  ACTUAL_WORK_VS_PLAN_ANALYSIS.md  ADVANCED_BINARY_SHOWCASE_RESULTS.md  ADVANCED_TYPES_IMPLEMENTATION_SUMMARY.md  API_CALL_CHAIN_AND_DATA_STRATEGY_ANALYSIS.md  API_GUIDE.md  API_REFACTOR_SUMMARY.md  API_USAGE_EXAMPLE.md  BINARY_EXPORT_USAGE_GUIDE.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CHANGELOG_EN.md  CHANGELOG_ZH.md  CLIPPY_FIXES_COMPLETE.md  CLIPPY_FIXES_SUMMARY.md  CONCRETE_COMPLETION_PLAN.md  CONCURRENCY_OPTIMIZATION_PLAN.md  Cargo.toml  DATA_ANALYSIS.md  DOCUMENTATION_STRUCTURE.md  ENHANCEMENT_WORK_PLAN.md  EXPORT_OPTIONS_GUIDE.md  EXTENDED_FIELDS_IMPLEMENTATION_SUMMARY.md  FFI_VISUALIZATION_ENHANCEMENT_SUMMARY.md  FINAL_BUG_FIX_RESULTS.md  FINAL_DEADLOCK_FIX_SUMMARY.md  FINAL_FIX_RESULTS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_REALISTIC_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN_STATUS.md  JSON_EXPORT_FAILURE_ROOT_CAUSE_ANALYSIS.md  JSON_EXPORT_FAILURE_ROOT_CAUSE_FINAL_REPORT.md  JSON_EXPORT_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  LICENSE  MAKE_CHECK_SUCCESS_FINAL_REPORT.md  MASTER_VS_V5PRE_COMPARISON.md  MEMORY_ANALYSIS_DEBUG_REPORT.md  (+75 more)
.github/: pull_request_template.md
benches/: binary_export_performance.rs  binary_performance.rs  comprehensive_benchmarks.rs  fast_realistic_tracking.rs  lock_optimization_benchmark.rs  minimal_performance.rs  performance_comparison.rs  real_optimization_benchmark.rs  realistic_memory_tracking.rs  ultra_fast_performance.rs
docs/: .nojekyll  30_thread_success_summary.md  ARCHITECTURE.md  BENCHMARK_GUIDE.md  BENCHMARK_GUIDE_EN.md  COMPLEX_TYPE_EXPORT_OPTIMIZATION.md  DOCUMENTATION_COVERAGE.md  JSON_EXPORT_OPTIMIZATION_TASK.md  JSON_EXPORT_PERFORMANCE_ANALYSIS.md  LIMITATIONS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_EN.md  README.md  async_compatibility.md  authentic_data_collection_success.md  binary_export_optimization_summary.md  enhanced_data_collection_summary.md  json_export_optimization.md  lockfree_implementation_complete.md  lockfree_implementation_success.md  lockfree_progress_summary.md  multithreaded_implementation_summary.md  multithreaded_usage.md  multithreading_complete.md  platform_resource_monitoring.md  smart_pointer_analysis_improvement.md
examples/: README.md  README_binary_usage.md  actix_web_server.rs  advanced_binary_showcase.rs  advanced_lifecycle_demo.rs  advanced_metrics_demo.rs  advanced_types_analysis.rs  api_finalization_demo.rs  async_basic_test.rs  async_binary_performance.rs  async_dispatch_benchmark.rs  async_memory_demo.rs  async_memory_test.rs  async_new_api.rs  async_template_validation_test.rs  basic_usage.rs  basic_usage_binary.rs  basic_usage_new.rs  binary_comparison_demo.rs  binary_export_demo.rs  binary_export_with_config.rs  binary_to_dashboard.rs  binary_vs_json_real_test.rs  circular_reference_detection.rs  classified_async_tasks.rs  cli_export_example.rs  complex_lifecycle_showcase.rs  complex_lifecycle_showcase_binary.rs  complex_lifecycle_showcase_old.rs  complex_multithread_showcase.rs  complex_type_export_demo.rs  complex_unsafe_ffi_showcase.rs  comprehensive_30_thread_validation.rs  comprehensive_async_showcase.rs  comprehensive_binary_to_html_demo.rs  comprehensive_memory_analysis.rs  comprehensive_modes_test.rs  comprehensive_performance_test.rs  comprehensive_rust_types_with_json.rs  comprehensive_unsafe_ffi_demo.rs  (+104 more)
examples_backup/: basic_usage.rs  binary_export_demo.rs  binary_parser_analyzer.rs  comprehensive_rust_types_with_json.rs  concurrent_memory_tracing.rs  large_scale_binary_comparison.rs  performance_stress_test_lite.rs  unsafe_ffi_demo.rs
images/: lifecycle_snapshot.json
memscope-derive/: Cargo.toml
memscope-derive/src/: lib.rs
rust_execution_visualizer_macros/: Cargo.toml
scripts/: test-unified-architecture.sh  verify-deployment.sh
src/: advanced_analysis.rs  advanced_charts.rs  advanced_trackable_macro.rs  advanced_types.rs  allocator.rs  analysis.rs  analysis_unified.rs  circular_reference.rs  diff_engine.rs  enhanced_memory_analysis.rs  enhanced_types.rs  export.rs  export_enhanced.rs  html_export.rs  lib.rs  lifecycle_viz.rs  main.rs  mod.rs  optimized_html_export.rs  procmacros.rs  report_generator.rs  scope_tracker.rs  system_monitor.rs  task_registry.rs  test_high_concurrency.rs  test_unified_tracking.rs  thread_utils.rs  tracker.rs  tracking.rs  tracking_unified.rs  types.rs  types_original.rs  unknown_memory_regions.rs  unsafe_ffi_tracker.rs  unsafe_ffi_visualization.rs  utils.rs  var_log_processor.rs  variable_registry.rs  visualization.rs  visualization_unified.rs  (+2 more)
task/: memory_analysis_task.md  task.md
templates/: README.md  async_template.html  binary_dashboard.html  clean_dashboard.html  components.js  dashboard-renderer.js  dashboard.html  dashboard.js  dashboard_unified.html  data-loader.js  enhanced_clean_dashboard.html  enhanced_diagnostics.js  hybrid_dashboard.html  hybrid_dashboard.js  multithread_template.html  performance_dashboard.html  script.js  styles.css  working_dashboard.html
tests/: README.md  advanced_memory_patterns_test.rs  advanced_memory_scenarios_test.rs  analysis_integration.rs  api_compatibility_check.rs  async_memory_test.rs  backward_compatibility_test.rs  binary_advanced_metrics_integration_test.rs  binary_compatibility_tests.rs  binary_error_handling_tests.rs  binary_export_comprehensive_test.rs  binary_export_integration_test.rs  binary_format_validation_test.rs  binary_performance_tests.rs  binary_serialization_optimization_test.rs  binary_stress_tests.rs  binary_to_json_optimization_test.rs  binary_type_detection_test.rs  binary_workflow_integration_test.rs  capture_backend_integration.rs  cli_integration_test.rs  comprehensive_core_tests.rs  concurrency_safety_test.rs  concurrent_memory_test.rs  container_analysis_integration_test.rs  conversion_validation_test.rs  core_functionality_test.rs  core_functionality_tests.rs  coverage_validation_test.rs  data_integrity_validation_test.rs  (+48 more)
(+746 files in other folders)
