[package]
name = "memscope-rs"
version = "0.1.2"
edition = "2021"
authors = ["TimWood"]
license = "MIT OR Apache-2.0"
description = "Advanced Rust memory analysis and visualization toolkit with custom allocator, variable tracking, and beautiful SVG reports."
homepage = "https://github.com/TimWood0x10/memscope-rs"
repository = "https://github.com/TimWood0x10/memscope-rs"
documentation = "https://docs.rs/memscope-rs"
readme = "README.md"
keywords = ["memory", "tracking", "allocator", "visualization", "profiling"]
categories = ["development-tools::profiling", "memory-management", "visualization"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
backtrace = { version = "0.3", features = ["serde"], optional = true }
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
memscope-derive = { path = "./memscope-derive", optional = true }

[lib]
name = "memscope_rs"
path = "src/lib.rs"

[[bin]]
name = "generate_report"
path = "src/bin/generate_report.rs"

[features]
backtrace = ["dep:backtrace"]
tracking-allocator = []
derive = ["dep:memscope-derive"]
default = ["tracking-allocator"]
test = []

[dev-dependencies]
crossbeam = "0.8"
rayon = "1.8"
parking_lot = "0.12"
tracing-test = "0.2"
tempfile = "3.10.1" # Or a compatible version


