[package]
name = "memscope-rs"
version = "0.1.6"
edition = "2021"
authors = ["TimWood"]
license = "MIT OR Apache-2.0"
description = "Advanced Rust memory analysis and visualization toolkit with custom allocator, variable tracking, and beautiful SVG reports."
homepage = "https://github.com/TimWood0x10/memscope-rs"
repository = "https://github.com/TimWood0x10/memscope-rs"
documentation = "https://docs.rs/memscope-rs"
readme = "README.md"
keywords = ["memory", "tracking", "allocator", "visualization", "profiling"]
categories = [
    "development-tools::profiling",
    "memory-management",
    "visualization",
]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "tracing-log",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
backtrace = { version = "0.3", features = ["serde"], optional = true }
rayon = "1.8"
clap = { version = "4.5.48", features = ["derive"] }
num_cpus = "1.16"
libc = "0.2"
sysinfo = { version = "0.37.1", optional = true }
flate2 = "1.0"
regex = "1.10"
rand = "0.9.2"
dashmap = "6.0"
parking_lot = "0.12"
bincode = "2.0.1"
memscope-derive = { path = "./memscope-derive", optional = true, version = "0.1.0" }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt"] }


[lib]
name = "memscope_rs"
path = "src/lib.rs"


[features]
backtrace = ["dep:backtrace"]
tracking-allocator = []
derive = ["dep:memscope-derive"]
parking-lot = []
default = ["parking-lot"]
test = []
# Enhanced data collection features
enhanced-tracking = ["backtrace", "system-metrics", "advanced-analysis"]
system-metrics = ["dep:sysinfo"]
advanced-analysis = []

[dev-dependencies]
rayon = "1.8"
parking_lot = "0.12"
tempfile = "3.23.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"

[[bench]]
name = "fast_realistic_tracking"
harness = false

[[bench]]
name = "minimal_performance"
harness = false

# Original benchmarks (slower)
[[bench]]
name = "realistic_memory_tracking"
harness = false

[[bench]]
name = "performance_comparison"
harness = false


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true

[profile.dev]
opt-level = 0
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 2
debug = false

# cargo build --profile release-small
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
