[package]
name = "memscope-rs"
version = "0.1.11"
edition = "2021"
authors = ["TimWood"]
license = "MIT OR Apache-2.0"
description = "A memory tracking library for Rust applications."
homepage = "https://github.com/TimWood0x10/memscope-rs"
repository = "https://github.com/TimWood0x10/memscope-rs"
documentation = "https://docs.rs/memscope-rs"
readme = "README.md"
keywords = ["memory", "tracking", "profiling", "debugging"]
categories = ["development-tools::profiling", "memory-management"]

[lib]
name = "memscope_rs"
path = "src/lib.rs"

[dependencies]
handlebars = "6.4.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "tracing-log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
backtrace = { version = "0.3", features = ["serde"], optional = true }
rayon = "1.8"
num_cpus = "1.16"
libc = "0.2"
sysinfo = "0.38.4"
regex = "1.12.3"
rand = { version = "0.10.0", features = ["std"] }
dashmap = "6.0"
parking_lot = "0.12.5"
crossbeam = "0.8"
memscope-derive = { path = "./memscope-derive", optional = true, version = "0.1.0" }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[features]
backtrace = ["dep:backtrace"]
tracking-allocator = []
derive = ["dep:memscope-derive"]
default = ["derive"]

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
tokio = { version = "1.51.0", features = ["full"] }
futures = "0.3.32"

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true

[profile.dev]
opt-level = 0
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
